[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "smeha-memory"
version = "0.1.0"
description = "Clean Apache-2.0 typed co-activation memory graph for local agent experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Ilya Vodopolov" }]
keywords = ["agents", "memory", "graph", "recall", "jsonl"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
smeha-memory = "smeha_memory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

